align h2 in correct place

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -3,10 +3,6 @@
   margin-right: var(--margin-text);
 }
 
-.projects h2{
-  text-align: center;
-}
-
 /* == ADDITIONAL PROJECTS SECTION == */
 
 .smallproj-wrapper{
