--- a/src/styles/projects/featuredwork/FeaturedWork.css
+++ b/src/styles/projects/featuredwork/FeaturedWork.css
@@ -1,3 +1,7 @@
+.featured-work h2 {
+    text-align: center;
+}
+
 .featured-work .highlight {
     color: var(--hovered-color-links);
 }
